--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@binance/connector": "^1.11.0",
     "@ethersproject/solidity": "^5.6.0",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
