--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@ethersproject/solidity": "^5.6.0",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "ethereumjs-tx": "^2.1.2",
     "ethereumjs-wallet": "^1.0.2",
     "express": "^4.17.3",
